# onefetch

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  PLAN.md  REQUIREMENTS.md
onefetch/: __init__.py  cache.py  cli.py  config.py  cookie_formats.py  credentials.py  extensions.py  html_to_md.py  llm_outputs.py  models.py  pipeline.py  router.py  secret_cli.py  secret_store.py  secret_web_import.py  secrets.py  storage.py
references/: ARCHITECTURE.en.md  ARCHITECTURE.md  ENGINEERING.en.md  ENGINEERING.md  IMPLEMENTATION_GUIDE.en.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INSTALLATION.en.md  INSTALLATION.md  PLAN.en.md  PLAN.md  PLAN_TODO.md  README.en.md  README.md  REQUIREMENTS.en.md  REQUIREMENTS.md  SKILL_COMMANDS.md  SKILL_COOKIES.md  SKILL_FIELDS.md  SKILL_PLATFORMS.md  SKILL_PLUGINS.md  TODO_EXPANDERS_PLAN.md  USER_GUIDE.en.md  USER_GUIDE.md
scripts/: bootstrap.sh  clean.sh  doctor.sh  doubao_chat.py  douyin_ai.py  init_extensions_repo.sh  migrate_readable_names.py  pack.sh  run_cli.sh  run_ingest.sh  setup_cookie.sh  setup_xhs_cookie.sh  setup_zhihu_cookie.sh  smoke_extensions.sh
tests/: test_adapter_registry.py  test_cli_discover.py  test_cli_present.py  test_cli_report.py  test_cli_secret.py  test_cookie_formats.py  test_extensions.py  test_geekbang_extension_adapter.py  test_generic_html_adapter.py  test_llm_output_parser.py  test_llm_outputs.py  test_pipeline.py  test_pipeline_errors.py  test_router.py  test_secret_cli.py  test_secret_store.py  test_secret_web_import.py  (+8 more)
(+40 files in other folders)
