[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onefetch"
version = "0.1.0"
description = "Focused cross-platform content ingestion (Xiaohongshu + generic HTML)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OneFetch Contributors" }]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "lxml>=5.2.0",
  "certifi>=2024.0.0",
  "truststore>=0.10.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
onefetch = "onefetch.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
